[package]
name = "mantissa"
version = "3.7.0-dev"
authors = ["Jeremy Wright <jtheardw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = true
codegen-units = 256
panic = "abort"

[profile.dev]
opt-level = 3
overflow-checks = true
