[package]
name = "mantissa"
version = "3.7.2"
authors = ["Jeremy Wright <jtheardw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = true
codegen-units = 256

[profile.dev]
opt-level = 3
overflow-checks = true
